--- a/functions/views/dev/case-study/lazyouts.hbs
+++ b/functions/views/dev/case-study/lazyouts.hbs
@@ -78,11 +78,12 @@
 				<div class="card__col--75">
 					<h3 class="title">Overview</h3>
 					<h4 class="subtitle">Project Description</h4>
-					<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst. Cloud bread schlitz waistcoat, venmo hell of cray microdosing single-origin coffee taxidermy shaman raclette affogato freegan.</p>
+					<p class="copy">An initiative to bring consistency to all of QuotedCar's products, and speed up future development through the development of an in-house front-end framework. While Bootstrap was useful for us in the past, a lot of development time was spent overriding the framework's opinionated visual style.</p>
+					<!-- <p class="copy"></p> -->
 					<div class="card--img-row">
-						<img class="img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
-						<img class="img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
-						<img class="img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
+						<img class="img-row__img color color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="Title 1" data-description="Description 1">
+						<img class="img-row__img color color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="Title 2" data-description="Description 2">
+						<img class="img-row__img color color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="Title 3" data-description="Description 3">
 					</div>
 				</div>
 
@@ -114,18 +115,18 @@
 			<div class="stripe_copy-container">
 
 				<h3 class="title">The Problem</h3>
-				<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst. Cloud bread schlitz waistcoat, venmo hell of cray microdosing single-origin coffee taxidermy shaman raclette affogato freegan.</p>
+				<p class="copy">While our developers have plenty of design reference, they spend a significant amount of time writing the same code over and over. "How many different class names do we have for a simple card?" I asked myself.</p>
 
 			</div>
 
 			<div class="stripe_stat-container">
-				<h3 class="title--stat">69%</h3>
-				<p class="copy--stat">Occupy adaptogen kinfolk thundercats blog church-key pork belly.</p>
+				<h3 class="title--stat">4</h3>
+				<p class="copy--stat">Different ways a card's HTML &amp; CSS was written in v1.2.1</p>
 			</div>
 
 			<div class="stripe_stat-container">
-				<h3 class="title--stat">27%</h3>
-				<p class="copy--stat">Viral man braid 3 wolf moon tattooed mustache..</p>
+				<h3 class="title--stat">0</h3>
+				<p class="copy--stat">My level of excitement for needless repitition.</p>
 			</div>
 
 		</div>
@@ -147,65 +148,45 @@
 					<div class="timeline-content">
 
 						<div class="interval">
-							<h4 class="subtitle">Testing, Etc.</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+							<h4 class="subtitle">Assessing Needs, Functionally and Visually</h4>
+							<p class="copy">Aside from the mandate for consistency. Before a pixel was pushed we needed to brainstorm the components we use most, what we like or don't like about how we build those compnents now, and what components will be added to the framework, and when.</p>
 						</div>
 
 						<div class="timeline--img-row interval--img-row">
-							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_email-gen@2x.png" alt="TITLE 1 Kale chips af mustache" data-description="1 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." data-hex="">
-							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 2 Kale chips af mustache" data-description="2 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." data-hex="">
-							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_qc-logo@2x.png" alt="TITLE 3 Kale chips af mustache" data-description="3 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard." data-hex="">
+							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_email-gen@2x.png" alt="TITLE 1 Kale chips af mustache" data-description="1 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard.">
+							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 2 Kale chips af mustache" data-description="2 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard.">
+							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_qc-logo@2x.png" alt="TITLE 3 Kale chips af mustache" data-description="3 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard.">
 						</div>
 
 						<div class="interval">
-							<h4 class="subtitle">Development Considerations</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+							<h4 class="subtitle">Selecting the Stack</h4>
+							<p class="copy">XXXXX.</p>
 						</div>
 
 						<div class="subinterval">
-							<h4 class="subtitle">Development Considerations</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+							<h4 class="subtitle">Example Subinterval Title</h4>
+							<p class="copy">Example Subinterval paragraph</p>
+						</div>
+
+						<div class="interval">
+							<h4 class="subtitle">Example Interval Title</h4>
+							<p class="copy">Example Interval Paragraph</p>
+						</div>
+
+						<div class="subinterval">
+							<h4 class="subtitle">Example Subinterval Title</h4>
+							<p class="copy">Example Subinterval paragraph</p>
 						</div>
 
 						<div class="timeline--img-row subinterval--img-row">
-							<img class="timeline--img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
-							<img class="timeline--img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
-							<img class="timeline--img-row__img color" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="" data-hex="">
+							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_email-gen@2x.png" alt="TITLE 1 Kale chips af mustache" data-description="1 Lumbersexual quinoa unicorn tilde trust fund.">
+							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 2 Kale chips af mustache" data-description="2 Lumbersexual quinoa unicorn tilde trust fund.">
+							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_qc-logo@2x.png" alt="TITLE 3 Kale chips af mustache" data-description="3 Lumbersexual quinoa unicorn tilde trust fund.">
 						</div>
 
 						<div class="subinterval">
-							<h4 class="subtitle">Development Considerations</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
-						</div>
-
-						<div class="interval">
-							<h4 class="subtitle">Planning</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
-						</div>
-
-						<div class="subinterval">
-							<h4 class="subtitle">Development Considerations</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
-						</div>
-
-						<div class="interval">
-							<h4 class="subtitle">Execution</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
-						</div>
-
-						<div class="subinterval">
-							<h4 class="subtitle">Development Considerations</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
-						</div>
-
-						<div class="subinterval">
-							<h4 class="subtitle">Development Considerations</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
-						</div>
-
-						<div class="subinterval">
-							<h4 class="subtitle">Development Considerations</h4>
-							<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst.</p>
+							<h4 class="subtitle">Example Subinterval Title</h4>
+							<p class="copy">Example Subinterval paragraph</p>
 						</div>
 
 					</div>
@@ -272,8 +253,11 @@
 
 		<!-- Modal -->
 		<div class="modal hide">
+			<div class="modal_close modal_trigger--close">
+				<i class="material-icons">close</i>
+			</div>
 			<div class="modal_card">
-				<img class="modal_img" src="" alt="" data-hex="">
+				<img class="modal_img" src="" alt="">
 				<div class="modal_type">
 					<h3 class="title"></h3>
 					<p class="copy"></p>
