--- a/public/stylesheets/scss/case-study.scss
+++ b/public/stylesheets/scss/case-study.scss
@@ -188,6 +188,7 @@
 
 // Primary Content Container for the Case Study View
 .case-study__content {
+	justify-items: center;
 	@media (max-width: 1300px) {
 
 	}
@@ -207,13 +208,14 @@
 
 	// Cards Within the Case Study's Content Area
 	.case-study__content > .card {
+		width: 800px;
 		background: $white-100;
 		box-shadow: 0 0 10px 0 #E3E3E3;
 		border-radius: 3px;
 		padding-top: 45px;
 		padding-bottom: 25px;
 		@media (max-width: 1300px) {
-
+			width: auto;
 		}
 		@media (max-width: 700px) {
 			box-shadow: none;
@@ -410,7 +412,7 @@
 
 					.timeline--img-row {
 						display: grid;
-						grid-template-columns: repeat(3, 1fr);
+						grid-template-columns: repeat(6, 1fr);
 						grid-row-gap: 25px;
 						grid-column-gap: 25px;
 						margin: 0 0 50px 0;
