Image optimization, modal JS refactoring

--- a/functions/views/dev/case-study/lazyouts.hbs
+++ b/functions/views/dev/case-study/lazyouts.hbs
@@ -80,23 +80,50 @@
 					<h4 class="subtitle">Project Description</h4>
 					<p class="copy">An initiative to bring consistency to all of QuotedCar's products, and speed up future development through the development of an in-house front-end framework. While Bootstrap was useful for us in the past, a lot of development time was spent overriding the framework's opinionated visual style.</p>
 					<!-- <p class="copy"></p> -->
+
 					<div class="card--img-row">
-						<img class="img-row__img color color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="Title 1" data-description="Description 1">
-						<img class="img-row__img color color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="Title 2" data-description="Description 2">
-						<img class="img-row__img color color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="Title 3" data-description="Description 3">
+
+						<img data-srcset=".../../images/case-studies/overview/overview_email-gen@1x.png,
+								   ../../images/case-studies/overview/overview_email-gen@2x.png 2x,
+								   ../../images/case-studies/overview/overview_email-gen@3x.png 3x"
+							data-src="../../images/case-studies/overview/overview_email-gen@3x.png"
+							src="../../images/case-studies/overview/overview_email-gen@3x.png"
+							class="img-row__img color lazyload modal_trigger--open"
+							alt="Title 1"
+							data-description="Description 1">
+
+						<img data-srcset="../../images/case-studies/overview/overview_qc-logo@1x.png,
+								   ../../images/case-studies/overview/overview_qc-logo@2x.png 2x,
+								   ../../images/case-studies/overview/overview_qc-logo@3x.png 3x"
+							data-src="../../images/case-studies/overview/overview_qc-logo@3x.png"
+							src="../../images/case-studies/overview/overview_qc-logo@3x.png"
+							class="img-row__img color lazyload modal_trigger--open"
+							alt="Title 2"
+							data-description="Description 2">
+
 					</div>
+
 				</div>
 
 				<div class="card__col--25">
 					<h4 class="subtitle">Client</h4>
-					<img class="client-brand" src="/images/case-studies/quotedcar-brand.png" alt="QuotedCar, LLC">
-					<h4 class="subtitle">Role</h4>
-					<ul class="list role-list">
-						<li>Project Manager</li>
-						<li>Front-End Developer</li>
-					</ul>
-					<h4 class="subtitle">Skills &amp; Tools Involved</h4>
+					<img data-srcset="/images/case-studies/quotedcar-brand@1x.png,
+							   /images/case-studies/quotedcar-brand@2x.png 2x,
+							   /images/case-studies/quotedcar-brand@3x.png 3x"
+						data-src="/images/case-studies/quotedcar-brand@3x.png"
+						src="/images/case-studies/quotedcar-brand@3x.png"
+						class="client-brand lazyload"
+						alt="QuotedCar, LLC">
+					<h4 class="subtitle">Roles</h4>
 					<div class="tags">
+						<div class="tag">Project Manager</div>
+						<div class="tag">UX Design</div>
+						<div class="tag">Front-End Dev</div>
+					</div>
+					<h4 class="subtitle">Skills &amp; Tools</h4>
+					<div class="tags">
+						<div class="tag">Sketch</div>
+						<div class="tag">Figma</div>
 						<div class="tag">HTML</div>
 						<div class="tag">CSS</div>
 						<div class="tag">Sass</div>
@@ -125,14 +152,14 @@
 			</div>
 
 			<div class="stripe_stat-container">
-				<h3 class="title--stat">0</h3>
-				<p class="copy--stat">My level of excitement for needless repitition.</p>
+				<h3 class="title--stat">1</h3>
+				<p class="copy--stat">Senior level developer on the team</p>
 			</div>
 
 		</div>
 
 		<!-- "Process" -->
-		<div class="content cards d1c t1c m1c case-study__content process_content">
+		<div class="content cards d1c t1c m1c case-study__content content--process">
 
 			<div class="card">
 
@@ -153,9 +180,25 @@
 						</div>
 
 						<div class="timeline--img-row interval--img-row">
-							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_email-gen@2x.png" alt="TITLE 1 Kale chips af mustache" data-description="1 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard.">
-							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 2 Kale chips af mustache" data-description="2 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard.">
-							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_qc-logo@2x.png" alt="TITLE 3 Kale chips af mustache" data-description="3 Lumbersexual quinoa unicorn tilde trust fund, offal shabby chic sartorial shoreditch coloring book. Pinterest plaid chia asymmetrical wolf vape vinyl cray godard gastropub tattooed migas poke knausgaard.">
+
+							<img data-srcset=".../../images/case-studies/overview/overview_email-gen@1x.png,
+									   ../../images/case-studies/overview/overview_email-gen@2x.png 2x,
+									   ../../images/case-studies/overview/overview_email-gen@3x.png 3x"
+								data-src="../../images/case-studies/overview/overview_email-gen@3x.png"
+								src="../../images/case-studies/overview/overview_email-gen@3x.png"
+								class="timeline--img-row__img color lazyload modal_trigger--open"
+								alt="Title 1"
+								data-description="Description 1">
+
+							<img data-srcset="../../images/case-studies/overview/overview_qc-logo@1x.png,
+									   ../../images/case-studies/overview/overview_qc-logo@2x.png 2x,
+									   ../../images/case-studies/overview/overview_qc-logo@3x.png 3x"
+								data-src="../../images/case-studies/overview/overview_qc-logo@3x.png"
+								src="../../images/case-studies/overview/overview_qc-logo@3x.png"
+								class="timeline--img-row__img color lazyload modal_trigger--open"
+								alt="Title 2"
+								data-description="Description 2">
+
 						</div>
 
 						<div class="interval">
@@ -178,10 +221,26 @@
 							<p class="copy">Example Subinterval paragraph</p>
 						</div>
 
-						<div class="timeline--img-row subinterval--img-row">
-							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_email-gen@2x.png" alt="TITLE 1 Kale chips af mustache" data-description="1 Lumbersexual quinoa unicorn tilde trust fund.">
-							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_dashboard-wireframe@2x.png" alt="TITLE 2 Kale chips af mustache" data-description="2 Lumbersexual quinoa unicorn tilde trust fund.">
-							<img class="timeline--img-row__img color modal_trigger--open" src="../../images/case-studies/overview/overview_qc-logo@2x.png" alt="TITLE 3 Kale chips af mustache" data-description="3 Lumbersexual quinoa unicorn tilde trust fund.">
+						<div class="timeline--img-row interval--img-row">
+
+							<img data-srcset=".../../images/case-studies/overview/overview_email-gen@1x.png,
+									   ../../images/case-studies/overview/overview_email-gen@2x.png 2x,
+									   ../../images/case-studies/overview/overview_email-gen@3x.png 3x"
+								data-src="../../images/case-studies/overview/overview_email-gen@3x.png"
+								src="../../images/case-studies/overview/overview_email-gen@3x.png"
+								class="timeline--img-row__img color lazyload modal_trigger--open"
+								alt="Title 1"
+								data-description="Description 1">
+
+							<img data-srcset="../../images/case-studies/overview/overview_qc-logo@1x.png,
+									   ../../images/case-studies/overview/overview_qc-logo@2x.png 2x,
+									   ../../images/case-studies/overview/overview_qc-logo@3x.png 3x"
+								data-src="../../images/case-studies/overview/overview_qc-logo@3x.png"
+								src="../../images/case-studies/overview/overview_qc-logo@3x.png"
+								class="timeline--img-row__img color lazyload modal_trigger--open"
+								alt="Title 2"
+								data-description="Description 2">
+
 						</div>
 
 						<div class="subinterval">
@@ -203,18 +262,44 @@
 			<div class="stripe_copy-container">
 
 				<h3 class="title">The Solution</h3>
-				<p class="copy">Shaman lyft meh tofu paleo. Tbh yr ugh air plant iceland. Occupy adaptogen kinfolk thundercats blog church-key pork belly humblebrag viral man braid 3 wolf moon tattooed mustache. Mumblecore lo-fi before they sold out pabst. Cloud bread schlitz waistcoat, venmo hell of cray microdosing single-origin coffee taxidermy shaman raclette affogato freegan.</p>
+				<p class="copy">A modular CSS framework was built, named lazyouts, allowing for anyone on the team with basic front-end knowledge to construct consistent layouts that conform to QuotedCar's design guidelines.</p>
+				<p class="copy">The development of lazyouts allowed for the team's junior developer to make a larger contribution. Moreover, the investment paid off by freeing up some of the more repetitive work of the team's senior developer.</p>
 
 			</div>
 
 			<div class="stripe_stat-container">
-				<h3 class="title--stat">34%</h3>
-				<p class="copy--stat">Occupy adaptogen kinfolk thundercats blog church-key pork belly.</p>
+				<h3 class="title--stat">37%</h3>
+				<p class="copy--stat">Amount of front-end sprint tasks that were able to be deferred from a senior to a junior level developer.</p>
 			</div>
 
-			<div class="stripe_stat-container">
-				<h3 class="title--stat">66%</h3>
-				<p class="copy--stat">Viral man braid 3 wolf moon tattooed mustache..</p>
+		</div>
+
+		<div class="content cards d1c t1c m1c case-study__content content--solution">
+
+			<div class="card">
+
+				<img data-srcset=".../../images/case-studies/overview/overview_email-gen@1x.png,
+						   ../../images/case-studies/overview/overview_email-gen@2x.png 2x,
+						   ../../images/case-studies/overview/overview_email-gen@3x.png 3x"
+					data-src="../../images/case-studies/overview/overview_email-gen@3x.png"
+					src="../../images/case-studies/overview/overview_email-gen@3x.png"
+					class="img--full-width color lazyload modal_trigger--open"
+					alt="Title 1"
+					data-description="Description 1">
+
+				<p class="copy">Here is some copy to go along with this other stuff.</p>
+
+				<img data-srcset="../../images/case-studies/overview/overview_qc-logo@1x.png,
+						   ../../images/case-studies/overview/overview_qc-logo@2x.png 2x,
+						   ../../images/case-studies/overview/overview_qc-logo@3x.png 3x"
+					data-src="../../images/case-studies/overview/overview_qc-logo@3x.png"
+					src="../../images/case-studies/overview/overview_qc-logo@3x.png"
+					class="img--full-width color lazyload modal_trigger--open"
+					alt="Title 2"
+					data-description="Description 2">
+
+				<p class="copy">And here are some more things to go along with this other stuff.</p>
+
 			</div>
 
 		</div>
@@ -257,6 +342,10 @@
 				<i class="material-icons">close</i>
 			</div>
 			<div class="modal_card">
+				<!-- <div class="loader">
+					<div class="loading-circle--1"></div>
+					<div class="loading-circle--2"></div>
+				</div> -->
 				<img class="modal_img" src="" alt="">
 				<div class="modal_type">
 					<h3 class="title"></h3>
